# community-savings-backend

./: .gitignore  Cargo.toml  README.md  render.yaml  test_file.txt  test_handshake.py  test_handshake2.py
migrations/: 002_add_guaranteed_amount.sql  003_user_profiles.sql  004_default_admin_user_profiles.sql  006_update_user_profiles_and_invitations.sql  007_add_auth_user_id_to_members.sql  008_add_outstanding_balance_to_loans.sql
scripts/: test_api.ps1
src/: config.rs  error.rs  main.rs  middleware.rs
src/handlers/: analytics.rs  auth.rs  cycles.rs  groups.rs  invitations.rs  loans.rs  meetings.rs  members.rs  mod.rs  mpesa.rs  penalties.rs  transactions.rs  users.rs  webhooks.rs
src/models/: group.rs  invitation.rs  loan.rs  member.rs  mod.rs  penalty.rs  transaction.rs  user_profile.rs
src/services/: finance.rs  mod.rs  mpesa.rs  validation.rs  webhook.rs
supabase/: config.toml
supabase/migrations/: 20260703120000_initial_schema.sql  20260703172200_add_auth_cycles_meetings.sql  20260707070000_default_admin_user_profiles.sql
