[package]
name = "community-savings-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
hex = "0.4.3"
hmac = "0.12.1"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio-rustls", "uuid"] }
subtle = "2.6.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }
uuid = { version = "1.22.0", features = ["serde", "v4"] }
base64 = "0.21"
